--- a/FrontPizza/Shared/LoginDisplay.razor
+++ b/FrontPizza/Shared/LoginDisplay.razor
@@ -1,4 +1,6 @@
-﻿<AuthorizeView>
+﻿@using Microsoft.AspNetCore.Authorization
+@attribute [Authorize]
+<AuthorizeView>
     <Authorized>
         <a href="Identity/Account/Manage">Hello, @context.User.Identity.Name!</a>
         <form method="post" action="Identity/Account/LogOut">
