--- a/FrontPizza/Pages/Pizza/IndexP.razor
+++ b/FrontPizza/Pages/Pizza/IndexP.razor
@@ -1,6 +1,8 @@
 ﻿@page "/pizza"
-
 @using FrontPizza.ViewModels;
+@using PizzaOnline.DAL.Models;
+@using Microsoft.AspNetCore.Authorization
+@attribute [Authorize]
 @inject Data.PizzaService pizzaService
 
 <h3>Pizza</h3>
@@ -22,38 +24,40 @@ else
         <tbody>
             @foreach (var pizza in pizza)
             {
-            <tr>
-                <td>@pizza.id</td>
-                <td>@pizza.namePizza</td>
-                <td>@pizza.size</td>
-                <td>@pizza.price</td>
-            </tr>
+                <tr>
+                    <td>@pizza.id</td>
+                    <td>@pizza.namePizza</td>
+                    <td>@pizza.size</td>
+                    <td>@pizza.price</td>
+                </tr>
             }
         </tbody>
     </table>
-    @*<button @onclick="PrevPage">Prev</button>
+    <button @onclick="PrevPage">Prev</button>
     <span>@pageNum</span>
-    <button @onclick="NextPage">Next</button>*@
+    <button @onclick="NextPage">Next</button>
 
 }
 @code {
     List<PizzaViewModel> pizza;
+    private int pageNum = 1;
+    private int pageSize = 2;
     protected override async Task OnInitializedAsync()
     {
-        pizza = await pizzaService.GetPizzaAsync();        
+        pizza = await pizzaService.GetPizzaAsync(new PizzaQueryParameters { PageSize = pageSize, PageNumber = pageNum });
 
     }
-    //public void NextPage()
-    //{
-    //    pageNum++;
-    //    pizza = pizzaService.GetPizza(new PizzaQueryParameters() { PageSize = pageSize, PageNumber = pageNum });
-    //}
-    //public void PrevPage()
-    //{
-    //    if (pageNum > 1)
-    //    {
-    //        pageNum--;
-    //        pizza = pizzaService.GetPizza(new PizzaQueryParameters() { PageSize = pageSize, PageNumber = pageNum });
-    //    }
-    //}
+    public async Task NextPage()
+    {
+        pageNum++;
+        pizza = await pizzaService.GetPizzaAsync(new PizzaQueryParameters { PageNumber = pageNum, PageSize = pageSize });
+    }
+    public async Task PrevPage()
+    {
+        if (pageNum > 1)
+        {
+            pageNum--;
+            pizza = await pizzaService.GetPizzaAsync(new PizzaQueryParameters { PageNumber = pageNum, PageSize = pageSize });
+        }
+    }
 }
