--- a/FrontPizza/Shared/NavMenu.razor
+++ b/FrontPizza/Shared/NavMenu.razor
@@ -27,6 +27,11 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Pizza
             </NavLink>
         </li>
+        @*<li class="nav-item px-3">
+            <NavLink class="nav-link" href="administration">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Administration
+            </NavLink>
+        </li>*@
     </ul>
 </div>
 
