--- a/FrontPizza/Pages/Index.razor
+++ b/FrontPizza/Pages/Index.razor
@@ -1,5 +1,6 @@
 ﻿@page "/"
+<h1>Hello, Customer</h1>
 
-<h1>Hello, world!</h1>
+        Welcome to my Pizzeria ;)
+        Bon appetit)
 
-Welcome to your new app.
