--- a/FrontPizza/Pages/Account/Account.razor
+++ b/FrontPizza/Pages/Account/Account.razor
@@ -3,78 +3,85 @@
 @inject IStringLocalizer<Account> L
 @page "/account"
 @attribute [Authorize]
-@if (customer != null)
+@if (customer == null)
 {
-    <h3>@L["Account: "] @Username</h3> 
-    <p><b>@L["Email"]: </b>@Email</p>
-    <hr />
-    <style>
-        img {
-            height: 150px;
-            width: 150px;
-            border-radius: 50%;
-        }
+    <p>"@L["Downloads"]..."</p>
+}
+else
+{
+    @if (customer != null)
+    {
+        <h3>@L["Account: "] @Username</h3>
+        <p><b>@L["Email"]: </b>@Email</p>
+        <hr />
+        <style>
+            img {
+                height: 150px;
+                width: 150px;
+                border-radius: 50%;
+            }
 
-        .headBlock {
-            display: flex;
-            align-items: center;
-            width: auto;
-        }
-
-            .headBlock > h3 {
-                margin: 20px;
+            .headBlock {
+                display: flex;
+                align-items: center;
                 width: auto;
             }
 
-        .dataBlock {
-            background-color: rgb(248,248,248);
-            padding: 10px;
-            border-radius: 20px;
-            width: auto;
-        }
-    </style>
-    <div class="dataBlock">
-        <div class="headBlock">
-            @if (base64string == null || string.IsNullOrEmpty(base64string) || customer.photo == null)
-            {
-                <img src="/default_images/defaultUser.jpg">
-            }
-            else
-            {
-                <img src="data:image/jpeg;base64,@base64string" />
-            }
+                .headBlock > h3 {
+                    margin: 20px;
+                    width: auto;
+                }
 
-            <h3>@Username</h3>
+            .dataBlock {
+                background-color: rgb(248,248,248);
+                padding: 10px;
+                border-radius: 20px;
+                width: auto;
+            }
+        </style>
+        <div class="dataBlock">
+            <div class="headBlock">
+                @if (base64string == null || string.IsNullOrEmpty(base64string) || customer.photo == null)
+                {
+                    <img src="/default_images/defaultUser.jpg">
+                }
+                else
+                {
+                    <img src="data:image/jpeg;base64,@base64string" />
+                }
+
+                <h3>@Username</h3>
+            </div>
+            <br />
+            <a href="/account/photo" class="btn btn-sm btn-primary">@L["Change photo"]</a>
+            <br />
+            <br />
+            <hr />
+
+            <h4>@L["Personal information"] :</h4>
+            <p><b>@L["Last name"]: </b>@customer.lastName</p>
+            <p><b>@L["First name"]: </b>@customer.firstName</p>
+            <p><b>@L["Second name"]: </b>@customer.secondName</p>
+            <p><b>@L["Address"]: </b>@customer.adress</p>
+            <p><b>@L["Phone number"]: </b>@customer.phoneNumber</p>
+            <a class="btn btn-primary" href="/account/inputData">@L["Enter information about yourself"]</a>
+            <br />
+            <br />
         </div>
-        <br />
-        <a href="/account/photo" class="btn btn-sm btn-primary">@L["Change photo"]</a>
-        <br />
-        <br />
-        <hr />
-
-        <h4>@L["Personal information"] :</h4>
-        <p><b>@L["Last name"]: </b>@customer.lastName</p>
-        <p><b>@L["First name"]: </b>@customer.firstName</p>
-        <p><b>@L["Second name"]: </b>@customer.secondName</p>
-        <p><b>@L["Address"]: </b>@customer.adress</p>
-        <p><b>@L["Phone number"]: </b>@customer.phoneNumber</p>
-        <a class="btn btn-primary" href="/account/inputData">@L["Enter information about yourself"]</a>
-        <br />
-        <br />
-    </div>
-}
-@code {
-    CustomerViewModel customer { get; set; } = new CustomerViewModel();
-    string Username { get; set; }
-    string Email { get; set; }
-    string base64string = null;
-    protected override async Task OnInitializedAsync()
+        }
+    }
+    @code {
+        CustomerViewModel customer { get; set; } = new CustomerViewModel();
+        string Username { get; set; }
+        string Email { get; set; }
+        string base64string = null;
+protected override async Task OnInitializedAsync()
     {
         var authState = await authentificationStateProvider.GetAuthenticationStateAsync();
-        var clientId = authState.User.Claims.First(x => x.Type == "customerId").Value;
+        var customerId = authState.User.Claims.First(x => x.Type == "customerId").Value;
         Username = authState.User.Identity.Name;
         Email = authState.User.Claims.First(x => x.Type == "email").Value;
-        customer = await customerService.GetCustomerByIdAsync(Int32.Parse(clientId));
+        customer = await customerService.GetCustomerByIdAsync(Int32.Parse(customerId));
         base64string = Convert.ToBase64String(customer.photo);
     }
-}
+    }
